--- a/L10_Labs/lab-350-javaee-servlet-meeting-planner/src/main/resources/static/registration.html
+++ b/L10_Labs/lab-350-javaee-servlet-meeting-planner/src/main/resources/static/registration.html
@@ -29,11 +29,11 @@ form {
  <form method="POST" action="registration">
 
   <label for="name">Name</label>
-  <input type="text" name="name" id="txtName" placeholder="Name eingeben" required>
+  <input type="text" name="_name" id="txtName" placeholder="Name eingeben" required>
   <span></span>
   <br>
   <label for="email">E-Mail</label>
-  <input type="email" name="email" id="txtEmail" placeholder="E-Mail eingeben" required>
+  <input type="email" name="_email" id="txtEmail" placeholder="E-Mail eingeben" required>
   <span></span>
   <br>
   <button>Registrieren</button>
