--- a/B10_Frontend_HTML_CSS_JS/300-javascript/helloworld/index_dom.html
+++ b/B10_Frontend_HTML_CSS_JS/300-javascript/helloworld/index_dom.html
@@ -8,10 +8,10 @@
 
 <body>
     <div id="log">Empty</div>
-    <script>
+    <!-- <script>
         let element = document.getElementById("log");
         element.innerHTML = "<h1>Hello from DOM!</h1>";
-    </script>
+    </script> -->
 </body>
 
 </html>
