--- a/E10_Backend_SpringBoot/example-453-spring-todomvc-webui/src/main/resources/static/index.html
+++ b/E10_Backend_SpringBoot/example-453-spring-todomvc-webui/src/main/resources/static/index.html
@@ -3,8 +3,8 @@
 	<head>
 		<meta charset="utf-8">
 		<title>VanillaJS • TodoMVC</title>
-		<link rel="stylesheet" href="node_modules/todomvc-common/base.css">
-		<link rel="stylesheet" href="node_modules/todomvc-app-css/index.css">
+		<link rel="stylesheet" href="css/base.css">
+		<link rel="stylesheet" href="css/index.css">
 		<link rel="shortcut icon" href="http://todomvc.com/site-assets/favicon.ico">
 	</head>
 	<body>
